--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log
 
 # Editor directories and files
 .idea
@@ -25,3 +26,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
